--- a/ansible/roles/teams-bridge/templates/msteams-deployment.yml
+++ b/ansible/roles/teams-bridge/templates/msteams-deployment.yml
@@ -28,6 +28,8 @@ spec:
       containers:
         - image: eimisans/mx-puppet-teams
           name: mx-puppet-teams
+          securityContext:
+            allowPrivilegeEscalation: false
           ports:
             - containerPort: 8432
           volumeMounts:
