Feat/215 tool to automate security scan (#227)
* feat: automatic kics scan

* yaml lint

* feat: ignore Kics errors and upload the report on github

* fix: allow to upload SARIF reports

* fix: wrong filename on SARIF reports

* just give a name to lint workflow

* fix: first kics security fix

* fix: ignore alert on initdb job

* fix: comment suppressed because false positive

* feat: separate linter and security scans in CI

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,4 +1,4 @@
-name: lint
+name: Linters
 
 on:
   workflow_dispatch:
@@ -6,6 +6,7 @@ on:
 
 jobs:
   lint-terraform:
+    name: "Terraform linter"
     runs-on: ubuntu-latest
 
     steps:
@@ -33,6 +34,7 @@ jobs:
         run: tflint -f compact
 
   lint-yaml:
+    name: "Yaml linter"
     runs-on: ubuntu-latest
 
     steps:
